--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,12 @@
 	"description": "test project",
 	"license": "BSD",
 	"require": {
-		"php": ">=5.5",
-		"laravel/framework": "5.*"
+            "php": ">=5.5",
+            "laravel/framework": "5.*"
 	},
+        "require-dev": {
+            "codeception/codeception": "*"
+        },
 	"autoload": {
         "classmap": [
             "database"
